<resources>
    <string name="app_name">Activities</string>
    <string name="activity1string">This is activity 1</string>
    <string name="activity2string">This is activity 2</string>
    <string name="button1string">Go To Activity 2</string>
    <string name="button2string">Go To Activity 1</string>
    <string name="button3string">Go To Activity 3</string>
    <string name="headline">Activity LifeCycle</string>
    <string name="custombtnstring">Open Chrome Custom Tabs</string>
    <string name="settings">Settings</string>
    <string name="bluetoothon">Enable</string>
    <string name="bluetoothoff">Disable</string>
    <string name="wifion">Enable</string>
    <string name="wifioff">Disable</string>

</resources>
